--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway Design</title>
     <link type="text/css" rel="stylesheet" href="./resources/css/reset.css">
     <link type="text/css" rel="stylesheet" href="./resources/css/style.css">
   </head>
 
   <body>
+  <h1>Broadway Design</h1>
+  <nav>
+    <li><a href="#">Home</a>Home</li>
+    <li><a href="#">Process</a></li>
+    <li><a href="#">Work</a></li>
+    <li><a href="#">Team</a></li>
+    <li><a href="#">Contacr</a></li>
+
+  </nav>
   </body>
 </html>
