--- a/index.html
+++ b/index.html
@@ -8,14 +8,44 @@
   </head>
 
   <body>
-  <h1>Broadway Design</h1>
-  <nav>
-    <li><a href="#">Home</a>Home</li>
-    <li><a href="#">Process</a></li>
-    <li><a href="#">Work</a></li>
-    <li><a href="#">Team</a></li>
-    <li><a href="#">Contacr</a></li>
-
-  </nav>
+  <div class="top-nav">
+    <h1>Broadway Design</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Process</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contacr</a></li>
+      </ul>
+    </nav>
+  </div>
+  <h2>Our Process</h2>
+  <img src="./resources/identify.svg" />
+  <h3>Identify</h3>
+  <p>We focus on most important details.</p>
+  <img src="./resources/understand.svg" />
+  <h3>Understand</h3>
+  <p>We study our projects inside and out.</p>
+  <img src="./resources/execute.svg" />
+  <h3 class="midpage-banner">Designated in New York</h3>
+  <h3>Portfolio</h3>
+  <p>Coming soon</p>
+  <h3>Team</h3>
+  <p>We are hiring!</p>
+  <h3>Contact</h3>
+  <p>Phone: (666)-666-6666</p>
+  <p>Email: test@example.com</p>
+  <p>Twitter: @test</p>
+  <footer>
+    <p>&copy; broadway2015</p>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Work</a>
+      <a href="#">Team</a>
+      <a href="#">Contact</a>
+    </nav>
+  </footer>
   </body>
 </html>
