--- a/index.html
+++ b/index.html
@@ -8,35 +8,70 @@
   </head>
 
   <body>
+
+    <!-- header -->
   <div class="top-nav">
     <h1>Broadway Design</h1>
+    <br />
+    <br />
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
+        <br />
         <li><a href="#">Process</a></li>
+        <br />
         <li><a href="#">Work</a></li>
+        <br />
         <li><a href="#">Team</a></li>
-        <li><a href="#">Contacr</a></li>
+        <br />
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
+  <br />
+    <!-- mid page -->
+
   <h2>Our Process</h2>
+  <br />
   <img src="./resources/identify.svg" />
+  <br />
   <h3>Identify</h3>
+  <br />
   <p>We focus on most important details.</p>
+  <br />
   <img src="./resources/understand.svg" />
+  <br />
   <h3>Understand</h3>
+  <br />
   <p>We study our projects inside and out.</p>
+  <br />
   <img src="./resources/execute.svg" />
-  <h3 class="midpage-banner">Designated in New York</h3>
+  <br />
+  <h3>Execute</h3>
+  <br />
+  <p>We put everything into our work.</p>
+  <br />
+  <h3 class="midpage-banner">Designed in New York</h3>
+  <br />
   <h3>Portfolio</h3>
+  <br />
   <p>Coming soon</p>
+  <br />
   <h3>Team</h3>
+  <br />
   <p>We are hiring!</p>
+  <br />
   <h3>Contact</h3>
+  <br />
   <p>Phone: (666)-666-6666</p>
+  <br />
   <p>Email: test@example.com</p>
+  <br />
   <p>Twitter: @test</p>
+  <br />
+
+  <!-- bottom -->
+
   <footer>
     <p>&copy; broadway2015</p>
     <nav>
